fix: url 추출로직 변경