@@ -121,30 +121,60 @@ public class AwsS3Service {
     }
 
     public String getS3KeyFromPublicUrl(String publicUrl) {
-        // CloudFront URL에서 S3 키 추출
-        if (cloudfrontDomain != null && !cloudfrontDomain.trim().isEmpty()) {
-            String cleanDomain = cloudfrontDomain.trim();
-            if (!cleanDomain.startsWith("http://") && !cleanDomain.startsWith("https://")) {
-                cleanDomain = "https://" + cleanDomain;
-            }
-            if (cleanDomain.endsWith("/")) {
-                cleanDomain = cleanDomain.substring(0, cleanDomain.length() - 1);
-            }
-            
-            if (publicUrl.startsWith(cleanDomain)) {
-                String key = publicUrl.substring(cleanDomain.length());
-                return key.startsWith("/") ? key.substring(1) : key;
-            }
+        if (publicUrl == null || publicUrl.isBlank()) {
+            return null;
         }
-        
-        // 직접 S3 URL에서 키 추출 (기존 로직)
-        String bucketUrl = "https://" + bucketName + ".s3.";
-        if (publicUrl.startsWith(bucketUrl)) {
-            String urlWithoutSchema = publicUrl.substring(8);
-            return urlWithoutSchema.substring(urlWithoutSchema.indexOf("/") + 1);
+        try {
+            java.net.URI uri = java.net.URI.create(publicUrl.trim());
+            String host = uri.getHost();
+            String path = uri.getPath(); // 쿼리/프래그먼트 제외
+            if (host == null || path == null) {
+                return null;
+            }
+
+            // 1) CloudFront: 설정된 도메인/경로 하위인지 확인
+            if (cloudfrontDomain != null && !cloudfrontDomain.trim().isEmpty()) {
+                String cfg = cloudfrontDomain.trim();
+                if (!cfg.startsWith("http://") && !cfg.startsWith("https://")) {
+                    cfg = "https://" + cfg;
+                }
+                java.net.URI cfgUri = java.net.URI.create(cfg);
+                String cfgHost = cfgUri.getHost();
+                String cfgPath = Optional.ofNullable(cfgUri.getPath()).orElse("");
+                if (cfgHost != null
+                        && host.equalsIgnoreCase(cfgHost)
+                        && (cfgPath.isEmpty() || path.startsWith(cfgPath))) {
+                    String rel = path.substring(cfgPath.length());
+                    String key = rel.startsWith("/") ? rel.substring(1) : rel;
+                    return java.net.URLDecoder.decode(key, java.nio.charset.StandardCharsets.UTF_8);
+                }
+            }
+
+            // 2) S3 virtual-hosted-style: {bucket}.s3[.-]*.amazonaws.com/{key}
+            String vhPrefix1 = bucketName + ".s3.";
+            String vhPrefix2 = bucketName + ".s3-"; // s3-accelerate 등
+            if (host.equalsIgnoreCase(bucketName + ".s3.amazonaws.com")
+                    || host.startsWith(vhPrefix1)
+                    || host.startsWith(vhPrefix2)) {
+                String key = path.startsWith("/") ? path.substring(1) : path;
+                return java.net.URLDecoder.decode(key, java.nio.charset.StandardCharsets.UTF_8);
+            }
+
+            // 3) S3 path-style: s3[.-]*.amazonaws.com/{bucket}/{key}
+            if (host.equalsIgnoreCase("s3.amazonaws.com")
+                    || host.startsWith("s3.")
+                    || host.startsWith("s3-")) {
+                String prefix = "/" + bucketName + "/";
+                if (path.startsWith(prefix)) {
+                    String key = path.substring(prefix.length());
+                    return java.net.URLDecoder.decode(key, java.nio.charset.StandardCharsets.UTF_8);
+                }
+            }
+
+            return null;
+        } catch (IllegalArgumentException e) {
+            return null;
         }
-        
-        return null;
     }
 
     // 파일 삭제
